# 2021_kg_seminar_04kadapter

./: .gitignore  DOCKERFILE  DockerfileCuda  DockerfileSage  README.md  dockerfile.sagemaker.gpu  get_adapters.py  get_fb15k_237.sh  get_figer.sh  get_open_entity.sh  prep_dirs.sh  prep_litwd.sh  pyproject.toml  requirements.txt  run_add_finetune_single_gpu.sh  run_cosmosqa_finetune_single_gpu.sh  run_cosmosqa_finetune_single_gpu_bak.sh  run_cosmosqa_finetune_single_gpu_bak_bak.sh  run_cosmosqa_finetune_single_gpu_v2.sh  run_example.sh  run_fb15k_finetune_single_gpu.sh  run_figer_finetune_single_gpu.sh  run_finetune_cosmosqa_adapter.bat  run_finetune_cosmosqa_adapter.sh  run_finetune_fb15k_adapter.sh  run_finetune_fb15k_relclass_adapter.sh  run_finetune_figer_adapter.bat  run_finetune_figer_adapter.sh  run_finetune_litwd19k_adapter.sh  run_finetune_litwd19k_relclass_adapter.sh  run_finetune_litwd1k_adapter.bat  run_finetune_litwd1k_adapter.sh  run_finetune_litwd1k_relclass_adapter.sh  run_finetune_litwd48k_adapter.sh  run_finetune_litwd48k_relclass_adapter.sh  run_finetune_openentity_adapter.bat  run_finetune_openentity_adapter.sh  run_finetune_searchqa_adapter.bat  run_finetune_tacred_adapter.bat  run_finetune_tacred_adapter.sh  (+10 more)
data/: cached_names.json  fb15k-relations.json  wn18rr-relations.json
deprecated/: run_finetune_quasart_adapter.bat  run_finetune_wn18rr_adapter.sh
examples/: run_finetune_TACRED_adapter.py  run_finetune_cosmosqa_adapter.py  run_finetune_cosmosqa_adapter_bak.py  run_finetune_cosmosqa_adapter_bak_bak.py  run_finetune_cosmosqa_adapter_v2.py  run_finetune_figer_adapter.py  run_finetune_litWik_adapter.py  run_finetune_openentity_adapter.py  run_finetune_openentity_orig.py  utils_figer.py  utils_glue.py
scripts/: convert_cosmosQA.py  convert_fb15k.py  convert_fb15k_rel_class.py  convert_litwd.py  (+4 more)
(+57 files in other folders)
