[tool.poetry]
name = "2021_kg_seminar_04kadapter"
version = "0.1.0"
description = ""
authors = ["fnk93 <f.krueger1993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "*"
boto3 = "*"
requests = "*"
regex = "*"
sentencepiece = "*"
sacremoses = "*"
sklearn = "*"
tensorboardX = "*"
prettytable = "*"
nltk = "*"
pexpect = "*"
datasets = "*"
torch = "*"
torchvision = "*"
Wikidata = "*"
s3fs = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
wemake-python-styleguide = "*"
flake8-pytest-style = "*"
nitpick = "*"
safety = "*"
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"
Sphinx = "*"
sphinx-autodoc-typehints = "*"
doc8 = "*"
m2r2 = "*"
tomlkit = "*"
pyformat = "*"
flake8-pyi = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
